--- a/index.html
+++ b/index.html
@@ -2,14 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | Bandomega.com</title>
+
     <link rel="icon" href="images/icon.png" type="image/x-icon" />
     <link rel="stylesheet" href="index.css" />
   </head>
-  <body>
-    <h1 class="text-3xl font-bold underline">Hello world!</h1>
-    <p class="text-md font-bold text-blue-600">Paragraph</p>
+  <body class="bg-bg-dark text-text">
+    <header class="flex justify-center">
+      <nav
+        class="bg-bg-light text-text mt-10 px-10 py-5 rounded-xl overflow-hidden max-w-fit"
+      >
+        <ul class="font-semibold text-[16px] flex gap-[30px]">
+          <li><a href="#" class="text-secondary">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">Find Me</a></li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
