--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | Bandomega.com</title>
 
-    <link rel="icon" href="images/icon.png" type="image/x-icon" />
+    <link rel="icon" href="images/icons/icon.png" type="image/x-icon" />
     <link rel="stylesheet" href="index.css" />
   </head>
   <body class="bg-bg-dark text-text">
     <header class="flex justify-center">
       <nav
-        class="bg-bg-light text-text mt-10 px-10 py-5 rounded-xl overflow-hidden max-w-fit"
+        class="bg-bg-light text-text mt-10 px-10 py-3 rounded-xl overflow-hidden max-w-fit"
       >
         <ul class="font-semibold text-[16px] flex gap-[30px]">
           <li><a href="#" class="text-secondary">Home</a></li>
@@ -22,5 +22,71 @@
         </ul>
       </nav>
     </header>
+
+    <main class="mx-[6.25rem]">
+      <section
+        id="jumbotron"
+        class="flex justify-center items-center gap-3 mt-20"
+      >
+        <div>
+          <div
+            class="inline-flex items-center px-6 py-3 rounded-full bg-gradient-to-r from-[#1e3a8a] from-20% to-[#0f172a] to-70% shadow-inner mb-10"
+          >
+            <span class="relative flex mr-3">
+              <span
+                class="w-3 h-3 bg-green-500 rounded-full animate-pulse"
+              ></span>
+              <span
+                class="absolute inset-0 w-3 h-3 bg-green-500 rounded-full blur-sm opacity-70"
+              ></span>
+            </span>
+
+            <span class="subtitle-600-20"> Exploring New Opportunities </span>
+          </div>
+          <div class="flex flex-col gap-3">
+            <h1 class="title-600-64">I'm Bando Mega K</h1>
+            <p class="body-default-400-16">
+              I develop with React and write to guide others in rethingking the
+              fundamentals through simple, effective mental models.
+            </p>
+          </div>
+          <div class="flex gap-5 mt-10">
+            <div
+              class="text-text bg-button px-6 py-3 rounded-xl flex gap-2 cursor-pointer"
+            >
+              <h3 class="body-defult-400-16">Learn more</h3>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                class="text-text w-5"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  d="M11 21.883l-6.235-7.527-.765.644 7.521 9 7.479-9-.764-.645-6.236 7.529v-21.884h-1v21.883z"
+                  fill="currentcolor"
+                />
+              </svg>
+            </div>
+            <h3
+              class="text-bg-dark bg-primary px-6 py-3 rounded-xl cursor-pointer hover:shadow-lg shadow-primary/50"
+            >
+              More about me
+            </h3>
+          </div>
+        </div>
+        <div class="w-full max-w-150">
+          <img
+            src="/images/profile.jpg"
+            alt="bando-profile"
+            class="rounded-xl"
+          />
+        </div>
+      </section>
+
+      <section class="w-full mt-10">
+        <h1 class="bg-amber-400">hrlo</h1>
+      </section>
+    </main>
   </body>
 </html>
