feat: add About page (WIP), update gradient styles, and fix footer

--- a/index.html
+++ b/index.html
@@ -718,8 +718,8 @@
       </section>
     </main>
 
-    <footer>
-      <div class="grid grid-cols-2 mx-[6.25rem] gap-15">
+    <footer class="mt-10">
+      <div class="grid grid-cols-2 mx-[6.25rem] gap-55">
         <div>
           <h1 class="caption-500-24">Bando Mega Kusuma</h1>
           <p class="caption-500-14 text-text-muted mt-2">
@@ -772,19 +772,19 @@
           <div>
             <h3 class="text-text-muted">General</h3>
             <ul class="flex flex-col gap-1 mt-1.5">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Blog</a></li>
-              <li><a href="#">Project</a></li>
-              <li><a href="#">Find Me</a></li>
+              <li><a href="#" class="hover:underline">Home</a></li>
+              <li><a href="/about" class="hover:underline">About</a></li>
+              <li><a href="#" class="hover:underline">Blog</a></li>
+              <li><a href="#" class="hover:underline">Project</a></li>
+              <li><a href="#" class="hover:underline">Find Me</a></li>
             </ul>
           </div>
           <div>
             <h3 class="text-text-muted">The website</h3>
             <ul class="flex flex-col gap-1 mt-1.5">
-              <li><a href="">Bucket List</a></li>
-              <li><a href="">Uses</a></li>
-              <li><a href="">Attribution</a></li>
+              <li><a href="#" class="hover:underline">Bucket List</a></li>
+              <li><a href="#" class="hover:underline">Uses</a></li>
+              <li><a href="#" class="hover:underline">Attribution</a></li>
             </ul>
           </div>
         </div>
@@ -799,7 +799,7 @@
           ></iframe>
         </div> -->
       </div>
-      <div class="caption-500-14 text-center py-5">
+      <div class="caption-500-14 text-center py-5 mt-3">
         Copyright &copy; 2025. Bando Mega Allright reserved.
       </div>
     </footer>
