--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <h1 class="text-3xl font-bold underline">Hello world!</h1>
-    <p class="text-md font-bold text-blue-600">Paragraph</p>
+    <p class="text-md font-bold text-blue-600">still development.</p>
   </body>
 </html>
