feat(about): add header section with profile image and icons

--- a/about/index.html
+++ b/about/index.html
@@ -22,7 +22,7 @@
       </nav>
     </header>
     <main>
-      <section id="header" class="gap-1.5 mt-20 mx-[6.25rem]">
+      <section id="header" class="mt-20 mx-[6.25rem]">
         <div class="title">
           <h1 class="title-600-48 text-center">
             About <span class="color-gradient">Me</span>
@@ -31,6 +31,67 @@
             Learning, building, and becoming along the way
           </p>
         </div>
+        <div class="flex justify-between items-center gap-25 mt-25">
+          <div class="">
+            <h2 class="heading-600-32">
+              I’m Bando Mega Kusuma, an aspiring Software Engineer, Frontend
+              Developer, and IoT enthusiast from Indonesia.
+            </h2>
+            <div class="body-default-400-16 mt-2.5">
+              <p>
+                I was born in 1999 in Bogor, Indonesia, and have lived in
+                Semarang for most of my life. I hold a degree in Physics, with a
+                focus on electronics and instrumentation. During my studies, I
+                discovered my passion for programming — especially web
+                development — and decided to pursue a career in this field.
+              </p>
+              <p>
+                My learning journey began with reading articles, taking online
+                courses, and joining both online and campus IT communities.
+                Along the way, I started writing articles to document what I had
+                learned — not only to strengthen my own understanding but also
+                to share knowledge with others on the same path.
+              </p>
+
+              <p>
+                Today, I am growing as a full-stack engineer, with a strong
+                focus on frontend development. I enjoy building projects that
+                combine clean design, responsive user interfaces, and solid
+                technical foundations.
+              </p>
+            </div>
+          </div>
+          <div class="relative w-full flex justify-center items-center py-15">
+            <div class="absolute -rotate-3 -left-10 top-0">
+              <img
+                src="/images/profile.jpg"
+                alt="Profile 1"
+                class="w-70 h-80 object-cover rounded-xl shadow-lg"
+              />
+            </div>
+            <div class="relative rotate-3 z-10">
+              <img
+                src="/images/profile-2.jpg"
+                alt="profile"
+                class="w-70 h-80 object-cover rounded-xl shadow-lg"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="tech" class="mt-20 mx-[6.25rem] h-screen">
+        <div class="flex justify-start items-center gap-1.5">
+          <img
+            src="/images/icons/growth.svg"
+            alt="growth-stack-icon"
+            class="w-10 h-10 -rotate-8"
+          />
+          <h2 class="title-600-48">
+            Growth <span class="color-gradient">Stack</span>
+          </h2>
+        </div>
+        <div class="stack"></div>
       </section>
     </main>
 
