--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home | Bandomega.com</title>
+    <title>Bando Mega Kusuma</title>
 
     <link rel="icon" href="images/icons/icon.png" type="image/x-icon" />
     <link rel="stylesheet" href="index.css" />
@@ -12,8 +12,8 @@
     <header>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="/about/">About</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about">About</a></li>
           <li><a href="/blog">Blog</a></li>
           <li><a href="/projects">Projects</a></li>
           <li><a href="/contact">Find Me</a></li>
@@ -25,15 +25,10 @@
       <section>
         <div>
           <div>
-            <span>
-              <span></span>
-              <span></span>
-            </span>
-
-            <span> Exploring New Opportunities </span>
+            <span>Exploring New Opportunities</span>
           </div>
           <div>
-            <h1>I'm Bando Mega K</h1>
+            <h1>I'm Bando Mega Kusuma</h1>
             <p>
               I develop with React and write to guide others in rethingking the
               fundamentals through simple, effective mental models.
@@ -42,6 +37,7 @@
           <div>
             <div>
               <h3>Learn more</h3>
+              <!-- TODO: Move to svg files -->
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill-rule="evenodd"
@@ -67,7 +63,7 @@
         <div>
           <img
             src="https://images.unsplash.com/photo-1625967445189-d35d49a37501?q=80&w=735&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="semarang-city"
+            alt="Semarang City"
           />
         </div>
 
@@ -610,7 +606,7 @@
             glad to hear from you.
           </p>
           <div>
-            <a href="#">Say Hello</a>
+            <a href="/contact">Say Hello</a>
           </div>
         </div>
       </section>
@@ -636,7 +632,7 @@
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="https://t.me/bandomegakusuma">
                   <svg
                     role="img"
                     viewBox="0 0 24 24"
@@ -655,7 +651,7 @@
                 <a href="#">
                   <img
                     src="/images/icons/linkedin.svg"
-                    alt="linkedin-icon"
+                    alt="LinkedIn"
                     class="w-6 h-6"
                   />
                 </a>
@@ -699,7 +695,7 @@
           <div>
             <h3>General</h3>
             <ul>
-              <li><a href="#">Home</a></li>
+              <li><a href="/">Home</a></li>
               <li><a href="/about">About</a></li>
               <li><a href="#">Blog</a></li>
               <li><a href="#">Project</a></li>
@@ -717,7 +713,7 @@
         </div>
       </div>
 
-      <div>Copyright &copy; 2025. Bando Mega Allright reserved.</div>
+      <div>Copyright &copy; 2025. Bando Mega Kusuma. All Rights Reserved.</div>
     </footer>
   </body>
 </html>
