--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </div>
         </div>
         <div>
-          <img src="/images/profile.jpg" alt="bando-profile" />
+          <img src="/images/profile.jpg" alt="Bando Mega Kusuma" width="500" />
         </div>
       </section>
 
