chore: migrate Tailwind setup from Vite to CLI and refactor project structure

--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="I am developer" />
 
     <link rel="icon" href="/images/icons/icon.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/index.css" />
+    <link rel="stylesheet" href="/src/output.css" />
   </head>
   <body class="bg-bg-dark text-text">
     <header class="flex justify-center">
@@ -16,7 +16,7 @@
       >
         <ul class="font-semibold text-[16px] flex gap-[30px]">
           <li><a href="/">Home</a></li>
-          <li><a href="/about/" class="text-secondary">About</a></li>
+          <li><a href="/about" class="text-secondary">About</a></li>
           <li><a href="/blog">Blog</a></li>
           <li><a href="/projects">Projects</a></li>
           <li><a href="/contact">Find Me</a></li>
