--- a/contact/index.html
+++ b/contact/index.html
@@ -12,7 +12,7 @@
         class="bg-bg-light text-text mt-10 px-10 py-3 rounded-xl overflow-hidden max-w-fit"
       >
         <ul class="font-semibold text-[16px] flex gap-[30px]">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li><a href="/about">About</a></li>
           <li><a href="/blog">Blog</a></li>
           <li><a href="/projects">Projects</a></li>
