--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Home | Bandomega.com</title>
 
     <link rel="icon" href="images/icons/icon.png" type="image/x-icon" />
-    <link rel="stylesheet" href="index.css" />
+    <link href="/src/output.css" rel="stylesheet" />
+    <!-- <link rel="stylesheet" href="./src/input.css" /> -->
   </head>
   <body class="bg-bg-dark text-text">
     <header class="flex justify-center">
@@ -14,8 +15,8 @@
         class="bg-bg-light text-text mt-10 px-10 py-3 rounded-xl overflow-hidden max-w-fit"
       >
         <ul class="font-semibold text-[16px] flex gap-[30px]">
-          <li><a href="index.html" class="text-secondary">Home</a></li>
-          <li><a href="/about/">About</a></li>
+          <li><a href="/" class="text-secondary">Home</a></li>
+          <li><a href="/about">About</a></li>
           <li><a href="/blog">Blog</a></li>
           <li><a href="/projects">Projects</a></li>
           <li><a href="/contact">Find Me</a></li>
