fix: update href links and replace inline SVG with img tag

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home | Bandomega.com</title>
+    <title>Bando Mega Kusuma</title>
 
-    <link rel="icon" href="images/icons/icon.png" type="image/x-icon" />
+    <link rel="icon" href="/images/icons/icon.png" type="image/x-icon" />
     <link href="/src/output.css" rel="stylesheet" />
-    <!-- <link rel="stylesheet" href="./src/input.css" /> -->
   </head>
   <body class="bg-bg-dark text-text">
     <header class="flex justify-center">
@@ -56,18 +55,11 @@
               class="text-text bg-button px-6 py-3 rounded-xl flex gap-2 cursor-pointer"
             >
               <h3 class="body-defult-400-16">Learn more</h3>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill-rule="evenodd"
-                clip-rule="evenodd"
+              <img
+                src="/images/icons/arrow-down.svg"
+                alt="Arrow Down"
                 class="text-text w-5"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  d="M11 21.883l-6.235-7.527-.765.644 7.521 9 7.479-9-.764-.645-6.236 7.529v-21.884h-1v21.883z"
-                  fill="currentcolor"
-                />
-              </svg>
+              />
             </div>
             <h3
               class="text-text bg-primary px-6 py-3 rounded-xl cursor-pointer hover:shadow-lg shadow-primary/50"
@@ -167,7 +159,7 @@
                       width="20"
                       height="20"
                       viewBox="0 0 24 24"
-                      class="text-accent"
+                      class="text-text"
                     >
                       <path
                         d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm5.848 12.459c.202.038.202.333.001.372-1.907.361-6.045 1.111-6.547 1.111-.719 0-1.301-.582-1.301-1.301 0-.512.77-5.447 1.125-7.445.034-.192.312-.181.343.014l.985 6.238 5.394 1.011z"
