--- a/contact/index.html
+++ b/contact/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Find me | Bandomega.com</title>
-    <link rel="stylesheet" href="../index.css" />
+    <title>Contact & Find me | Bando Mega Kusuma</title>
+    <link href="/src/output.css" rel="stylesheet" />
+    <link rel="icon" href="/images/icons/icon.png" type="image/x-icon" />
   </head>
   <body class="bg-bg-dark text-text">
     <header class="flex justify-center">
