feat: add Projects and Contact pages

--- a/contact/index.html
+++ b/contact/index.html
@@ -23,6 +23,164 @@
         </ul>
       </nav>
     </header>
-    <h1 class="text-4xl">Halaman Find me</h1>
+    <main>
+      <section class="mt-20 mx-[6.25rem]">
+        <div class="title text-center">
+          <h1 class="title-600-48">
+            Find <span class="color-gradient">Me</span>
+          </h1>
+          <p class="body-large-400-18 text-text-muted">
+            Let’s connect! Whether it’s about tech, collaboration, or just
+            sharing ideas - here’s where you can reach me.
+          </p>
+        </div>
+      </section>
+      <section class="mt-20 mx-[6.25rem]">
+        <form
+          class="bg-bg-light px-15 py-15 w-150 flex flex-col gap-5 mx-auto rounded-lg"
+        >
+          <div class="w-full">
+            <label for="name"> Name </label>
+            <input
+              id="name"
+              type="text"
+              placeholder="John Doe"
+              class="bg-bg-dark py-2 px-3 mt-1 rounded-lg w-full"
+            />
+          </div>
+
+          <div class="w-full">
+            <label for="email">Email Address</label>
+            <input
+              id="email"
+              type="email"
+              placeholder="example@email.com"
+              class="bg-bg-dark py-2 px-3 mt-1 rounded-lg w-full"
+            />
+          </div>
+
+          <div class="w-full">
+            <label for="subject"> Subject </label>
+            <input
+              id="subject"
+              type="text"
+              placeholder="Inquiry about collaboration"
+              class="bg-bg-dark py-2 px-3 mt-1 rounded-lg w-full"
+            />
+          </div>
+
+          <div class="w-full">
+            <label for="message"> Message </label>
+            <textarea
+              id="message"
+              placeholder="Write your message here.."
+              class="bg-bg-dark py-2 px-3 mt-1 rounded-lg w-full h-25 resize-none"
+            ></textarea>
+          </div>
+
+          <button
+            type="submit"
+            class="py-3 px-8 bg-button w-50 mx-auto rounded-lg cursor-pointer"
+          >
+            Send Message
+          </button>
+        </form>
+      </section>
+    </main>
+
+    <footer class="mt-20">
+      <div
+        class="w-full h-[1px] bg-gradient-to-r from-bg-dark via-text to-bg-dark my-8 opacity-30"
+      ></div>
+
+      <div class="grid grid-cols-2 mx-[6.25rem] gap-55">
+        <div>
+          <h1 class="caption-500-24">Bando Mega Kusuma</h1>
+          <p class="caption-500-14 text-text-muted mt-2">
+            Learning, building, and sharing software concepts through mental
+            models that make coding more accessible.
+          </p>
+          <div>
+            <ul class="flex gap-5 mt-5">
+              <li>
+                <a href="mailto:bandomega1@gmail.com">
+                  <img
+                    src="/images/icons/mail.svg"
+                    alt="mail-icon"
+                    class="w-5 h-5"
+                  />
+                </a>
+              </li>
+              <li>
+                <a href="https://t.me/bandomega" target="_blank">
+                  <img
+                    src="/images/icons/telegram.svg"
+                    alt="Telegram"
+                    class="w-6 h-6"
+                  />
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://www.linkedin.com/in/bando-mega-kusuma"
+                  target="_blank"
+                >
+                  <img
+                    src="/images/icons/linkedin.svg"
+                    alt="LinkedIn"
+                    class="w-6 h-6"
+                  />
+                </a>
+              </li>
+              <li>
+                <a href="https://www.github.com/bando9" target="_blank">
+                  <img
+                    src="/images/stack/github.svg"
+                    class="w-5 h-5"
+                    alt="GitHub"
+                  />
+                </a>
+              </li>
+              <li>
+                <a href="https://www.threads.com/@asliandho" target="_blank">
+                  <img
+                    src="/images/icons/thread.svg"
+                    alt="Thread"
+                    class="w-5 h-5"
+                  />
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="grid grid-cols-2">
+          <div>
+            <h3 class="text-text-muted">General</h3>
+            <ul class="flex flex-col gap-1 mt-1.5">
+              <li><a href="/" class="hover:underline">Home</a></li>
+              <li><a href="/about" class="hover:underline">About</a></li>
+              <li><a href="/blog" class="hover:underline">Blog</a></li>
+              <li><a href="/projects" class="hover:underline">Project</a></li>
+              <li><a href="/contact" class="hover:underline">Find Me</a></li>
+            </ul>
+          </div>
+          <div>
+            <h3 class="text-text-muted">The website</h3>
+            <ul class="flex flex-col gap-1 mt-1.5">
+              <li><a href="#" class="hover:underline">Bucket List</a></li>
+              <li><a href="#" class="hover:underline">Uses</a></li>
+              <li><a href="#" class="hover:underline">Attribution</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div
+        class="w-full h-[1px] bg-gradient-to-r from-bg-dark via-text to-bg-dark my-8 opacity-30"
+      ></div>
+
+      <div class="caption-500-14 text-center text-text-muted mb-8">
+        Copyright &copy; 2025. Bando Mega Allright reserved.
+      </div>
+    </footer>
   </body>
 </html>
