feat: add Project Details page and fix Project card layout in Projects & Home pages

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
           </p>
         </div>
 
-        <div class="projects-list mt-13 flex flex-col gap-10">
-          <div class="project-card flex gap-3 items-start justify-between">
+        <div class="projects-list mt-13 flex flex-col gap-15">
+          <div class="project-card-left flex gap-3 items-start justify-between">
             <div class="w-180">
               <h1 class="subtitle-600-24 mb-1">Bandomega Personal Website</h1>
               <h3 class="caption-500-14">
@@ -195,92 +195,137 @@
                   />
                 </div>
               </div>
-              <div class="flex items-center gap-5 mt-5">
-                <div
-                  class="flex items-center justify-center gap-1.5 cursor-pointer hover:underline"
-                >
-                  <img
-                    src="/images/stack/github.svg"
-                    alt="GitHub Icon"
-                    class="w-5"
-                  />
-                  <p>Repository</p>
+              <div class="flex items-center justify-between">
+                <div class="flex items-center gap-5 mt-5">
+                  <a
+                    href="https://github.com/bando9/bandomega-portfolio/tree/main"
+                    target="_blank"
+                  >
+                    <div
+                      class="flex items-center justify-center gap-1.5 cursor-pointer hover:underline"
+                    >
+                      <img
+                        src="/images/stack/github.svg"
+                        alt="GitHub Icon"
+                        class="w-5"
+                      />
+                      <p>Repository</p>
+                    </div>
+                  </a>
+
+                  <a href="https://v1.bandomega.com/" target="_blank">
+                    <div
+                      class="flex justify-center items-center gap-1.5 cursor-pointer hover:underline"
+                    >
+                      <img
+                        src="/images/icons/link-1.svg"
+                        alt="Link Icon"
+                        class="w-5"
+                      />
+                      <p>Open link sites</p>
+                    </div>
+                  </a>
                 </div>
 
-                <div
-                  class="flex justify-center items-center gap-1.5 cursor-pointer hover:underline"
-                >
-                  <img
-                    src="/images/icons/link-1.svg"
-                    alt="Link Icon"
-                    class="w-5"
-                  />
-                  <p>Open link sites</p>
-                </div>
+                <a href="/projects/project-details" class="me-10">
+                  <div
+                    class="flex items-center justify-center gap-1.5 cursor-pointer hover:underline"
+                  >
+                    <p>View project</p>
+                    <img
+                      src="/images/icons/arrow-right.svg"
+                      alt="Arrow right icon"
+                      class="w-5"
+                    />
+                  </div>
+                </a>
               </div>
             </div>
-            <div class="">
-              <img src="images/project-1.png" alt="" />
+            <div>
+              <img
+                src="/images/project-1.png"
+                alt="Photo Personal Web v1"
+                class="rounded-lg"
+              />
             </div>
           </div>
 
-          <div class="project-card flex gap-3 items-start justify-between">
-            <div class="">
-              <img src="images/project-1.png" alt="" />
+          <div
+            class="project-card-right flex gap-3 items-start justify-between"
+          >
+            <div>
+              <img
+                src="/images/project-2.jpg"
+                alt="Photo Memomate"
+                class="rounded-lg"
+              />
             </div>
             <div class="w-180">
-              <h1 class="subtitle-600-24 mb-1">Bandomega Personal Website</h1>
+              <h1 class="subtitle-600-24 mb-1">Memomate – Daily Notes App</h1>
               <h3 class="caption-500-14">
-                A personal portfolio website showcasing projects, GitHub links,
-                and project highlights. Built with HTML5 and Bootstrap.
+                A simple web app for creating and managing daily notes. Built
+                with ReactJS and modular styling.
               </h3>
               <div class="flex mt-3 gap-4">
                 <h3 class="caption-500-14">Tools:</h3>
                 <div class="flex gap-3">
                   <img
-                    src="/images/stack/html5.svg"
-                    alt="HTML Icon"
+                    src="/images/stack/react.svg"
+                    alt="React Icon"
                     class="w-5"
-                  />
-
-                  <img src="/images/stack/css.svg" class="w-5" alt="CSS Icon" />
-
-                  <img
-                    src="/images/stack/bootstrap.svg"
-                    class="w-6"
-                    alt="Bootstrap Icon"
                   />
                 </div>
               </div>
-              <div class="flex items-center gap-5 mt-5">
-                <div
-                  class="flex items-center justify-center gap-1.5 cursor-pointer hover:underline"
-                >
-                  <img
-                    src="/images/stack/github.svg"
-                    alt="GitHub Icon"
-                    class="w-5"
-                  />
-                  <p>Repository</p>
+              <div class="flex items-center justify-between">
+                <div class="flex items-center gap-5 mt-5">
+                  <a href="https://github.com/bando9/memomate" target="_blank">
+                    <div
+                      class="flex items-center justify-center gap-1.5 cursor-pointer hover:underline"
+                    >
+                      <img
+                        src="/images/stack/github.svg"
+                        alt="GitHub Icon"
+                        class="w-5"
+                      />
+                      <p>Repository</p>
+                    </div>
+                  </a>
+
+                  <a href="https://memomate-six.vercel.app/" target="_blank">
+                    <div
+                      class="flex justify-center items-center gap-1.5 cursor-pointer hover:underline"
+                    >
+                      <img
+                        src="/images/icons/link-1.svg"
+                        alt="Link Icon"
+                        class="w-5"
+                      />
+                      <p>Open link sites</p>
+                    </div>
+                  </a>
                 </div>
 
-                <div
-                  class="flex justify-center items-center gap-1.5 cursor-pointer hover:underline"
-                >
-                  <img
-                    src="/images/icons/link-1.svg"
-                    alt="Link Icon"
-                    class="w-5"
-                  />
-                  <p>Open link sites</p>
-                </div>
+                <a href="/projects/project-details" class="me-10">
+                  <div
+                    class="flex items-center justify-center gap-1.5 cursor-pointer hover:underline"
+                  >
+                    <p>View project</p>
+                    <img
+                      src="/images/icons/arrow-right.svg"
+                      alt="Arrow right icon"
+                      class="w-5"
+                    />
+                  </div>
+                </a>
               </div>
             </div>
           </div>
 
-          <div class="project-card flex gap-3 items-start justify-between">
+          <div class="project-card-left flex gap-3 items-start justify-between">
             <div class="w-180">
-              <h1 class="subtitle-600-24 mb-1">Bandomega Personal Website</h1>
+              <h1 class="subtitle-600-24 mb-1">
+                Mini Library – Book CRUD Application
+              </h1>
               <h3 class="caption-500-14">
                 A personal portfolio website showcasing projects, GitHub links,
                 and project highlights. Built with HTML5 and Bootstrap.
@@ -297,38 +342,68 @@
                   <img src="/images/stack/css.svg" class="w-5" alt="CSS Icon" />
 
                   <img
-                    src="/images/stack/bootstrap.svg"
+                    src="/images/stack/javascript.svg"
                     class="w-6"
-                    alt="Bootstrap Icon"
+                    alt="JavaScript Icon"
                   />
                 </div>
               </div>
-              <div class="flex items-center gap-5 mt-5">
-                <div
-                  class="flex items-center justify-center gap-1.5 cursor-pointer hover:underline"
-                >
-                  <img
-                    src="/images/stack/github.svg"
-                    alt="GitHub Icon"
-                    class="w-5"
-                  />
-                  <p>Repository</p>
+
+              <div class="flex items-center justify-between">
+                <div class="flex items-center gap-5 mt-5">
+                  <a
+                    href="https://github.com/bando9/perpustakaan-mini"
+                    target="_blank"
+                  >
+                    <div
+                      class="flex items-center justify-center gap-1.5 cursor-pointer hover:underline"
+                    >
+                      <img
+                        src="/images/stack/github.svg"
+                        alt="GitHub Icon"
+                        class="w-5"
+                      />
+                      <p>Repository</p>
+                    </div>
+                  </a>
+
+                  <a
+                    href="https://perpustakaan-mini.vercel.app/"
+                    target="_blank"
+                  >
+                    <div
+                      class="flex justify-center items-center gap-1.5 cursor-pointer hover:underline"
+                    >
+                      <img
+                        src="/images/icons/link-1.svg"
+                        alt="Link Icon"
+                        class="w-5"
+                      />
+                      <p>Open link sites</p>
+                    </div>
+                  </a>
                 </div>
 
-                <div
-                  class="flex justify-center items-center gap-1.5 cursor-pointer hover:underline"
-                >
-                  <img
-                    src="/images/icons/link-1.svg"
-                    alt="Link Icon"
-                    class="w-5"
-                  />
-                  <p>Open link sites</p>
-                </div>
+                <a href="/projects/project-details" class="me-10">
+                  <div
+                    class="flex items-center justify-center gap-1.5 cursor-pointer hover:underline"
+                  >
+                    <p>View project</p>
+                    <img
+                      src="/images/icons/arrow-right.svg"
+                      alt="Arrow right icon"
+                      class="w-5"
+                    />
+                  </div>
+                </a>
               </div>
             </div>
-            <div class="">
-              <img src="images/project-1.png" alt="" />
+            <div>
+              <img
+                src="/images/project-3.jpg"
+                alt="Photo Mini Library"
+                class="rounded-lg"
+              />
             </div>
           </div>
         </div>
