feat(wip): update Project Details layout and fix contact anchors

--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact & Find me | Bando Mega Kusuma</title>
+    <title>Contact & Contact | Bando Mega Kusuma</title>
     <link href="/src/output.css" rel="stylesheet" />
     <link rel="icon" href="/images/icons/icon.png" type="image/x-icon" />
   </head>
@@ -18,7 +18,7 @@
           <li><a href="/blog">Blog</a></li>
           <li><a href="/projects">Projects</a></li>
           <li>
-            <a href="/contact" class="text-secondary">Find Me</a>
+            <a href="/contact" class="text-secondary">Contact</a>
           </li>
         </ul>
       </nav>
@@ -26,9 +26,7 @@
     <main>
       <section class="mt-20 mx-[6.25rem]">
         <div class="title text-center">
-          <h1 class="title-600-48">
-            Find <span class="color-gradient">Me</span>
-          </h1>
+          <h1 class="title-600-48 color-gradient">Contact</h1>
           <p class="body-large-400-18 text-text-muted">
             Let’s connect! Whether it’s about tech, collaboration, or just
             sharing ideas - here’s where you can reach me.
@@ -161,7 +159,7 @@
               <li><a href="/about" class="hover:underline">About</a></li>
               <li><a href="/blog" class="hover:underline">Blog</a></li>
               <li><a href="/projects" class="hover:underline">Project</a></li>
-              <li><a href="/contact" class="hover:underline">Find Me</a></li>
+              <li><a href="/contact" class="hover:underline">Contact</a></li>
             </ul>
           </div>
           <div>
