--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li><a href="/about">About</a></li>
           <li><a href="/blog">Blog</a></li>
           <li><a href="/projects">Projects</a></li>
-          <li><a href="/contact">Find Me</a></li>
+          <li><a href="/contact">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -716,7 +716,7 @@
               <li><a href="/about" class="hover:underline">About</a></li>
               <li><a href="/blog" class="hover:underline">Blog</a></li>
               <li><a href="/projects" class="hover:underline">Project</a></li>
-              <li><a href="/contact" class="hover:underline">Find Me</a></li>
+              <li><a href="/contact" class="hover:underline">Contact</a></li>
             </ul>
           </div>
           <div>
