--- a/projects/project-details/index.html
+++ b/projects/project-details/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="/images/icons/icon.png" type="image/x-icon" />
   </head>
   <body class="bg-bg-dark text-text scroll-smooth">
-    <header class="header-blog h-90 relative w-full">
+    <header class="w-full">
       <div class="flex justify-center">
         <nav
           class="bg-bg-light text-text mt-10 px-10 py-3 rounded-xl overflow-hidden max-w-fit"
@@ -16,64 +16,73 @@
           <ul class="font-semibold text-[16px] flex gap-[30px]">
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
-            <li><a href="/blog" class="text-secondary">Blog</a></li>
-            <li><a href="/projects">Projects</a></li>
+            <li><a href="/blog">Blog</a></li>
+            <li><a href="/projects" class="text-secondary">Projects</a></li>
             <li>
-              <a href="/contact">Find Me</a>
+              <a href="/contact">Contact</a>
             </li>
           </ul>
         </nav>
       </div>
-      <div class="absolute bottom-2 mx-[6.25rem]">
-        <h4
-          class="inline-block body-extra-small-400-12 bg-card py-2 px-4 rounded-2xl"
-        >
-          React
-        </h4>
-        <h4
-          class="inline-block body-extra-small-400-12 bg-card py-2 px-4 rounded-2xl"
-        >
-          Animation
-        </h4>
-
-        <h4
-          class="inline-block body-extra-small-400-12 bg-card py-2 px-4 rounded-2xl"
-        >
-          HTML
-        </h4>
-      </div>
     </header>
+
     <main>
       <section class="mt-20 mx-[6.25rem]">
         <div class="mt-10">
-          <h2 class="heading-600-32">
-            List Animation using Motion for ReactList Animation using Motion for
-            React
-          </h2>
+          <h2 class="heading-600-32">Bandomega Personal Website</h2>
           <p class="caption-500-24 text-text-muted mt-2">
-            An in-depth guide on how to animate enter and exit animation for
-            list using Motion for React (previously Framer Motion).
+            A personal portfolio website showcasing projects, GitHub links, and
+            project highlights. Built with HTML5 and Bootstrap.
           </p>
         </div>
         <div
-          class="border-t-1 border-b-1 flex border-text-muted items-center justify-around mt-10"
+          class="border-t-1 border-b-1 flex border-text-muted items-center justify-between mt-10"
         >
-          <p>December 17, 24</p>
-          <div class="flex gap-1.5 items-center py-3">
-            <img
-              src="/images/icons/book-1.svg"
-              class="w-5 h-5"
-              alt="Book Icon"
-            />
-            <p class="caption-500-14">1,200 views</p>
+          <div class="flex gap-5">
+            <div class="flex gap-1.5 items-center py-3">
+              <img
+                src="/images/icons/people.svg"
+                class="w-4 h-4"
+                alt="Book Icon"
+              />
+              <p class="caption-500-12">Team of 1</p>
+            </div>
+            <div class="flex gap-1.5 items-center py-3">
+              <img
+                src="/images/icons/book-1.svg"
+                class="w-4 h-4"
+                alt="Book Icon"
+              />
+              <p class="caption-500-12">1,200 views</p>
+            </div>
+            <div class="flex gap-1.5 items-center">
+              <img
+                src="/images/icons/like.svg"
+                alt="Like Icon"
+                class="w-4 h-4"
+              />
+              <p class="caption-500-12">12k likes</p>
+            </div>
           </div>
-          <div class="flex gap-1.5 items-center">
-            <img src="/images/icons/time.svg" alt="Clock Icon" class="w-5" />
-            <p class="caption-500-14">6 min read</p>
-          </div>
-          <div class="flex gap-1.5 items-center">
-            <img src="/images/icons/like.svg" alt="Like Icon" class="w-5" />
-            <p class="caption-500-14">12k likes</p>
+
+          <div class="flex gap-3">
+            <div class="flex gap-1.5 items-center">
+              <img
+                src="/images/icons/time.svg"
+                alt="Clock Icon"
+                class="w-4 h-4"
+              />
+              <p class="caption-500-12">6 min read</p>
+            </div>
+
+            <div class="flex gap-1.5 items-center">
+              <img
+                src="/images/icons/link-1.svg"
+                alt="Clock Icon"
+                class="w-4 h-4"
+              />
+              <p class="caption-500-12">Open link sites</p>
+            </div>
           </div>
         </div>
       </section>
@@ -208,7 +217,7 @@
               <li><a href="/about" class="hover:underline">About</a></li>
               <li><a href="/blog" class="hover:underline">Blog</a></li>
               <li><a href="/projects" class="hover:underline">Project</a></li>
-              <li><a href="/contact" class="hover:underline">Find Me</a></li>
+              <li><a href="/contact" class="hover:underline">Contact</a></li>
             </ul>
           </div>
           <div>
